# backend

./: .ci.env  .dev.env  .dockerignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml  diesel.toml  docker-compose.yml
.github/workflows/: ci.yml  publish-dockerhub.yml
data/articles/: bakery_noimages.csv
docker/postgres/: Dockerfile  enable-extension-postgis.sql
migrations/: V1__initial.sql
migrations/2020-03-23-150808_enable_extension_postgis/: down.sql
migrations/2020-03-23-162211_create_delivery_points/: down.sql  up.sql
migrations/2020-03-23-190401_create_routes/: down.sql  up.sql
migrations/2020-03-23-200928_mobile_shops/: down.sql  up.sql
migrations/2020-03-26-185134_mobile_shops_add_production_client_id/: down.sql  up.sql
migrations/2020-03-26-211941_drop_routes_route_points/: down.sql  up.sql
migrations/2020-03-27-145429_create_products/: down.sql  up.sql
migrations/2020-03-27-210625_create_products/: down.sql  up.sql
migrations/2020-03-28-183912_order_flow/: down.sql  up.sql
src/: cli_opts.rs  db.rs  lib.rs  main.rs  model_mappings.rs  schema.rs
src/api/: driver.rs  end_customer.rs  mod.rs
src/db/: custom_types.rs  mod.rs  models.rs  queries.rs  query.rs  schema.rs
src/payment/: paypal.rs
tests/: order.rs
