[package]
name = "lieferemma"
version = "0.1.0"
authors = ["marcelbuesing <marcel.buesing@codebrew.de>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
prost = "0.6"
prost-types = "0.6"
r2d2 = "0.8"
refinery = { version = "0.2", features = ["tokio", "tokio-postgres"] }
structopt = "0.3"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "bigdecimal" ] }
tokio = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5"
tonic = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = { version = "0.1.1", default-features = false, features = ["transport"] }